--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <p class="features-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                     </li>
                 </ul>
-            </div class="container">
+            </div>
         </section>
         <section class="directions section ">
             <div class="container">
@@ -65,7 +65,7 @@
                         <li><img src="./images/box2.jpg" alt="Design" width="360"></li>
                         <li><img src="./images/box3.jpg" alt="Adaptation" width="360"></li>
                     </ul>
-            </div class="container">
+            </div>
         </section>
         <section class="team section">
         <div class="container">
@@ -93,7 +93,7 @@
                         <p class="team-proff">UI Designer</p>
                     </li>
                 </ul>
-        </div class="container">
+        </div>
         </section>
     </main>
 
@@ -101,7 +101,7 @@
         <div class="container">
             <a href="./index.html" class="logo">Web<span class="foot-logo">Studio</span></a>
             <p class="foot-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-        </div class="container">
+        </div>
      </footer>
 
 </body>
