--- a/portfolio.html
+++ b/portfolio.html
@@ -96,7 +96,7 @@
         <div class="container">
             <a href="./index.html" class="logo">Web<span class="foot-logo">Studio</span></a>
             <p class="foot-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-        </div class="container">
+        </div>
      </footer>
 
 </body>
