--- a/portfolio.html
+++ b/portfolio.html
@@ -42,48 +42,66 @@
                 <ul class="list projects">
                     <li class="project-card">
                         <img src="./images/project1.jpg" alt="Banking App Interface Concept" width="360" class="img-portfolio">
-                        <h2 class="project-name">Banking App Interface Concept</h2>
-                        <p class="project-direction">App</p>
+                        <div class="text-project-card">
+                            <h2 class="project-name">Banking App Interface Concept</h2>
+                            <p class="project-direction">App</p>
+                        </div>
                     </li>
                     <li class="project-card">
                         <img src="./images/project2.jpg" alt="Cashless Payment" width="360" class="img-portfolio">
-                        <h2 class="project-name">Cashless Payment</h2>
-                        <p class="project-direction">Marketing</p>
+                        <div class="text-project-card">
+                            <h2 class="project-name">Cashless Payment</h2>
+                            <p class="project-direction">Marketing</p>
+                        </div>
                     </li>
                     <li class="project-card">
                         <img src="./images/project3.jpg" alt="Meditaion App" width="360" class="img-portfolio">
-                        <h2 class="project-name">Meditaion App</h2>
-                        <p class="project-direction">App</p>
+                        <div class="text-project-card">
+                            <h2 class="project-name">Meditaion App</h2>
+                            <p class="project-direction">App</p>
+                        </div>
                     </li>
                     <li class="project-card">
                         <img src="./images/project4.jpg" alt="Taxi Service" width="360" class="img-portfolio">
-                        <h2 class="project-name">Taxi Service</h2>
-                        <p class="project-direction">Marketing</p>
+                        <div class="text-project-card">
+                            <h2 class="project-name">Taxi Service</h2>
+                            <p class="project-direction">Marketing</p>
+                        </div>
                     </li>
                     <li class="project-card">
                         <img src="./images/project5.jpg" alt="Screen Illustrations" width="360" class="img-portfolio">
-                        <h2 class="project-name">Screen Illustrations</h2>
-                        <p class="project-direction">Design</p>
+                        <div class="text-project-card">
+                            <h2 class="project-name">Screen Illustrations</h2>
+                            <p class="project-direction">Design</p>
+                        </div>
                     </li>
                     <li class="project-card">
                         <img src="./images/project6.jpg" alt="Online Courses" width="360" class="img-portfolio">
-                        <h2 class="project-name">Online Courses</h2>
-                        <p class="project-direction">Marketing</p>
+                        <div class="text-project-card">
+                            <h2 class="project-name">Online Courses</h2>
+                            <p class="project-direction">Marketing</p>
+                        </div>
                     </li>
                     <li class="project-card">
                         <img src="./images/project7.jpg" alt="Instagram Stories Concept" width="360" class="img-portfolio">
-                        <h2 class="project-name">Instagram Stories Concept</h2>
-                        <p class="project-direction">Design</p>
+                        <div class="text-project-card">
+                            <h2 class="project-name">Instagram Stories Concept</h2>
+                            <p class="project-direction">Design</p>
+                        </div>
                     </li>
                     <li class="project-card">
                         <img src="./images/project8.jpg" alt="Organic Food" width="360" class="img-portfolio">
-                        <h2 class="project-name">Organic Food</h2>
-                        <p class="project-direction">Web Site</p>
+                        <div class="text-project-card">
+                            <h2 class="project-name">Organic Food</h2>
+                            <p class="project-direction">Web Site</p>
+                        </div>
                     </li>
                     <li class="project-card">
                         <img src="./images/project9.jpg" alt="Fresh Coffee" width="360" class="img-portfolio">
-                        <h2 class="project-name">Fresh Coffee</h2>
-                        <p class="project-direction">Web Site</p>
+                        <div class="text-project-card">
+                            <h2 class="project-name">Fresh Coffee</h2>
+                            <p class="project-direction">Web Site</p>
+                        </div>
                     </li>
 
                 </ul>
